# leprac-gui

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp
cmake/: imgui.cmake  tinyfd.cmake
config/: path.yml
config/address/le02/: frame.yml  frame_1_10_fix.yml  pattern.yml
config/address/le03/: frame.yml  pattern.yml
config/languages/: en.yml  zh.yml
config/languages/en/: en.yml
src/: config.h  game_version.cpp  game_version.h
tests/: CMakeLists.txt  main2.cpp  test_config.cpp  test_imgui.cpp
